Use an in memory store until crbug.com/688533 is fixed.

In ChromeOS Guest Mode, Chrome runs with --disable-sync which causes
ProfileSyncService to always be null.  Thus, we are unable to create a
ModelTypeStore.  Until this can be fixed, use the in-memory store that's
normally used for testing.

BUG=694992

Review-Url: https://codereview.chromium.org/2716973002
Cr-Commit-Position: refs/heads/master@{#454387}

Former-commit-id: 233dc1e93732142695fe2407f1ed882454cd1eab